# june

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
app/: __init__.py  config.py  main.py  mcp_server.py  models.py
app/services/: __init__.py  allocation.py  backtest.py  cio_message.py  correlations.py  dashboard.py  equivalence.py  framework_portfolio.py  fred.py  hermes_llm.py  hermes_state.py  ism.py  market.py  mirror.py  mit_overlay.py  monitor.py  perplexity.py  phase.py  risk_budget.py  scenario_inputs.py  sheets.py  slr_note.py  state.py  stats.py  telegram.py  whatif.py
app/services/ibkr/: __init__.py  flex.py  store.py
app/services/steno/: __init__.py  (+12 more)
deploy/: com.june.dashboard.plist
docs/: alternative-rules.md  backtesting-build.md  bittel.md  build-28th-may.md  build-start-7thmay.md  dashboar-build-full.md  dashboard-build.md  devlog-hermes-build.md  djg-design-decisions.md  known-issues.md  next-build.md  phase-4-plan.md  statistical-significance-and-dual-ranking.md  steno-aligner.md
docs/archive/: analyst-frameworks.md  build-brief.md  feasibility.md  tech-spec.md
scripts/: run-dashboard.sh
static/: app.css  app.js  business-cycle.html  dashboard.html  djg.css  djg.js  hermes.css  hermes.js  liquidity.html  steno.css  steno.html  steno.js
tests/: test_allocation.py  test_backtest_service.py  test_cio_message.py  test_dashboard_logic.py  test_framework_portfolio.py  test_hermes_state_integration.py  test_ism_client.py  test_mit_overlay.py  test_phase_detector.py  test_risk_budget.py  test_slr_note.py  test_steno_mirror.py  test_whatif.py
