[project]
name = "june"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler",
    "beautifulsoup4",
    "fastapi",
    "google-auth",
    "gspread",
    "httpx",
    "pandas",
    "python-dotenv",
    "uvicorn",
    "yfinance",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
