[project]
name = "june"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler",
    "beautifulsoup4",
    "fastapi",
    "google-auth",
    "gspread",
    "httpx",
    "numpy>=2.4.4",
    "pandas",
    "playwright>=1.40.0",
    "PyMuPDF>=1.24.0",
    "python-dotenv",
    "python-multipart",
    "requests>=2.31.0",
    "uvicorn",
    "yfinance",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
